# featurevis

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routes/: activations.py  attribution.py  layers.py  model.py  upload.py
backend/app/services/: attribution.py  hook_extractor.py  image_processor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ActivationGrid.tsx  AttributionPanel.tsx  ImageViewer.tsx  LayerSidebar.tsx  ModelUpload.tsx
frontend/src/hooks/: useActivations.ts
frontend/src/services/: api.ts
